<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activities.BookActivity">

<LinearLayout
    android:id="@+id/station_details"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/station_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/car_stations_spinner_filter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter" />

</LinearLayout>
<LinearLayout
    android:id="@+id/drop_station_details"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="20dp"
    android:layout_below="@id/station_details"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/drop_station_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/car_drop_stations_spinner_filter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter" />

</LinearLayout>

<LinearLayout
    android:id="@+id/date_picker_on_filter"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/drop_station_details"
    android:layout_margin="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/date_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/date_selector"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter"
        android:textSize="18sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/start_time_details_on_filter"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/date_picker_on_filter"
    android:layout_margin="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/start_time_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter"
        android:textSize="18sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/number_of_passengers"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/start_time_details_on_filter"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/number_of_passengers_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/number_of_passengers_spinner_filter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter" />

</LinearLayout>

<LinearLayout
    android:id="@+id/luggage_details_on_filter"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/number_of_passengers"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/luggage_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/luggage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter"
        android:textSize="18sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/vehicle_type_details_on_filter"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_below="@id/luggage_details_on_filter"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left|center"
        android:text="@string/vehicle_type"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/car_type_selector"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/button_filter"
        android:textSize="18sp" />

</LinearLayout>

<Button
    android:id="@+id/search_car"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_below="@+id/vehicle_type_details_on_filter"
    android:layout_margin="10dp"
    android:background="@drawable/button_style"
    android:text="@string/book_cars"
    android:textColor="@color/white"
    android:textSize="18sp" />

</RelativeLayout>
